# TARDISsight

./: .gitignore  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
data/: large_corpus.json
data/sightings_cache/: CVE-2021-26855.json  CVE-2021-34527.json  CVE-2021-44228.json  CVE-2022-1388.json  CVE-2022-26134.json  CVE-2022-30190.json  CVE-2023-20198.json  CVE-2023-22515.json  CVE-2023-23397.json  CVE-2023-34362.json  CVE-2023-44487.json  CVE-2024-1709.json  CVE-2024-21413.json  CVE-2024-23897.json  CVE-2024-3400.json  CVE-2024-47575.json  CVE-2024-9164.json  CVE-2025-0282.json  CVE-2025-29824.json  CVE-2025-31324.json  CVE-2025-54236.json  CVE-2025-59287.json  CVE-2025-61932.json  CVE-2025-8088.json
docs/: adaptive.md  arima.md  bayesian.md  decay.md  evaluation.md  poisson.md  pooling.md  typed.md  zeroinflated.md
papers/bonhomme2026modelingsparseburstyvulnerability/: bonhomme2026modelingsparseburstyvulnerability.tex  mybib.bib
papers/borrowing-strength-across-cves/: .gitignore  README.md  borrowing-strength-sightings.tex  main.tex  mybib.bib
scripts/: build_large_corpus.py
tardissight/: corpus.py  data.py  forecast.py  forecast1.py  forecast2.py  plots.py
tardissight/arima/: forecast1.py  sarimax.ipynb  sarimax.py  sarimax1.py
tardissight/decay/: adaptive.ipynb  adaptive.py  exponential_decay.py  logistic_growth.py
tardissight/eval/: __init__.py  backtest.py  metrics.py  run.py  run_bayes.py  run_pooling.py  run_typed.py  run_zeroinflated.py
tardissight/evolution/: global_sightings_evolution.ipynb  sightings_evolution.ipynb
(+8 files in other folders)
